jswt-ast-lowering/src/snapshots/jswt_ast_lowering__test__class_declaration_desugars_into_functions.snap
---
source: jswt-ast-lowering/src/lib.rs
expression: ast

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 35,
                                    end: 88,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 35,
                                        end: 88,
                                    },
                                    value: "Array#constructor",
                                },
                                params: FormalParameterList {
                                    parameters: [
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 47,
                                                    end: 50,
                                                },
                                                value: "len",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 52,
                                                    end: 55,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 57,
                                                    end: 65,
                                                },
                                                value: "capacity",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 67,
                                                    end: 70,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test.1",
                                            module: "module/test.1",
                                            start: 35,
                                            end: 88,
                                        },
                                        ty: Primitive(
                                            I32,
                                        ),
                                    },
                                ),
                                body: BlockStatement {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 72,
                                        end: 88,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Variable(
                                                VariableStatement {
                                                    span: Span {
                                                        file: "",
                                                        module: "",
                                                        start: 0,
                                                        end: 0,
                                                    },
                                                    modifier: Const(
                                                        Span {
                                                            file: "",
                                                            module: "",
                                                            start: 0,
                                                            end: 0,
                                                        },
                                                    ),
                                                    target: Identifier(
                                                        Identifier {
                                                            span: Span {
                                                                file: "",
                                                                module: "",
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                            value: "this",
                                                        },
                                                    ),
                                                    expression: Arguments(
                                                        ArgumentsExpression {
                                                            span: Span {
                                                                file: "",
                                                                module: "",
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                            ident: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "",
                                                                        module: "",
                                                                        start: 0,
                                                                        end: 0,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "",
                                                                            module: "",
                                                                            start: 0,
                                                                            end: 0,
                                                                        },
                                                                        value: "malloc",
                                                                    },
                                                                },
                                                            ),
                                                            arguments: ArgumentsList {
                                                                span: Span {
                                                                    file: "",
                                                                    module: "",
                                                                    start: 0,
                                                                    end: 0,
                                                                },
                                                                arguments: [
                                                                    Literal(
                                                                        Integer(
                                                                            IntegerLiteral {
                                                                                span: Span {
                                                                                    file: "",
                                                                                    module: "",
                                                                                    start: 0,
                                                                                    end: 0,
                                                                                },
                                                                                value: 8,
                                                                            },
                                                                        ),
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                    type_annotation: Some(
                                                        TypeAnnotation {
                                                            span: Span {
                                                                file: "",
                                                                module: "",
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                            ty: Primitive(
                                                                I32,
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                            Return(
                                                ReturnStatement {
                                                    span: Span {
                                                        file: "",
                                                        module: "",
                                                        start: 0,
                                                        end: 0,
                                                    },
                                                    expression: Identifier(
                                                        IdentifierExpression {
                                                            span: Span {
                                                                file: "",
                                                                module: "",
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                            ident: Identifier {
                                                                span: Span {
                                                                    file: "",
                                                                    module: "",
                                                                    start: 0,
                                                                    end: 0,
                                                                },
                                                                value: "this",
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
