jswt-ast-lowering/src/snapshots/jswt_ast_lowering__test__class_declaration_desugars_new_expression.snap
---
source: jswt-ast-lowering/src/lib.rs
expression: ast

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 35,
                                    end: 88,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 35,
                                        end: 88,
                                    },
                                    value: "Array#constructor",
                                },
                                params: FormalParameterList {
                                    parameters: [
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 47,
                                                    end: 50,
                                                },
                                                value: "len",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 52,
                                                    end: 55,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 57,
                                                    end: 65,
                                                },
                                                value: "capacity",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 67,
                                                    end: 70,
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test.1",
                                            module: "module/test.1",
                                            start: 35,
                                            end: 88,
                                        },
                                        ty: Primitive(
                                            I32,
                                        ),
                                    },
                                ),
                                body: BlockStatement {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 72,
                                        end: 88,
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 108,
                                    end: 172,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 117,
                                        end: 121,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 124,
                                        end: 172,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Variable(
                                                VariableStatement {
                                                    span: Span {
                                                        file: "test.1",
                                                        module: "module/test.1",
                                                        start: 138,
                                                        end: 162,
                                                    },
                                                    modifier: Let(
                                                        Span {
                                                            file: "test.1",
                                                            module: "module/test.1",
                                                            start: 138,
                                                            end: 141,
                                                        },
                                                    ),
                                                    target: Identifier(
                                                        Identifier {
                                                            span: Span {
                                                                file: "test.1",
                                                                module: "module/test.1",
                                                                start: 142,
                                                                end: 143,
                                                            },
                                                            value: "x",
                                                        },
                                                    ),
                                                    expression: New(
                                                        NewExpression {
                                                            span: Span {
                                                                file: "test.1",
                                                                module: "module/test.1",
                                                                start: 146,
                                                                end: 161,
                                                            },
                                                            expression: Arguments(
                                                                ArgumentsExpression {
                                                                    span: Span {
                                                                        file: "test.1",
                                                                        module: "module/test.1",
                                                                        start: 150,
                                                                        end: 161,
                                                                    },
                                                                    ident: Identifier(
                                                                        IdentifierExpression {
                                                                            span: Span {
                                                                                file: "test.1",
                                                                                module: "module/test.1",
                                                                                start: 150,
                                                                                end: 155,
                                                                            },
                                                                            ident: Identifier {
                                                                                span: Span {
                                                                                    file: "test.1",
                                                                                    module: "module/test.1",
                                                                                    start: 150,
                                                                                    end: 155,
                                                                                },
                                                                                value: "Array",
                                                                            },
                                                                        },
                                                                    ),
                                                                    arguments: ArgumentsList {
                                                                        span: Span {
                                                                            file: "test.1",
                                                                            module: "module/test.1",
                                                                            start: 155,
                                                                            end: 161,
                                                                        },
                                                                        arguments: [
                                                                            Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test.1",
                                                                                            module: "module/test.1",
                                                                                            start: 156,
                                                                                            end: 157,
                                                                                        },
                                                                                        value: 1,
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test.1",
                                                                                            module: "module/test.1",
                                                                                            start: 159,
                                                                                            end: 160,
                                                                                        },
                                                                                        value: 2,
                                                                                    },
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                    type_annotation: None,
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
