jswt-ast-lowering/src/snapshots/jswt_ast_lowering__test__class_declaration_lowers_class_fields.snap
---
source: jswt-ast-lowering/src/lib.rs
expression: ast

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [],
                },
            },
        ],
    },
}
